complete new style add user link for pm

--- a/includes/comment-emotion/static/css/src/style.css
+++ b/includes/comment-emotion/static/css/src/style.css
@@ -26,7 +26,7 @@
 }
 	.comment-emotion-close{
 		position: absolute;
-		background: #D9534F;
+		background: #FF4081;
 		left: -15px;
 		bottom: -15px;
 		width: 30px;
