--- a/includes/custom-account/static/css/src/style.css
+++ b/includes/custom-account/static/css/src/style.css
@@ -69,7 +69,7 @@
 	padding-right:10px;
 }
 	.history-group .point-value.plus{
-		color: #D9534F;
+		color: #FF4081;
 	}
 	.history-group .point-value.minus{
 		color: #5cb85c;
