--- a/includes/custom-page-tags/static/css/src/style.css
+++ b/includes/custom-page-tags/static/css/src/style.css
@@ -30,7 +30,7 @@
 			.panel-tags-index li a:hover,
 			.panel-tags-index li a:active,
 			.panel-tags-index li a:hover:before{
-				color:#d9534f;
+				color:#FF4081;
 			}
 		.panel-tags-index li a:before{
 			font-family: 'FontAwesome';
