--- a/includes/custom-point/static/css/src/style.css
+++ b/includes/custom-point/static/css/src/style.css
@@ -23,7 +23,7 @@
 	white-space: nowrap;
 }
 	.history-group .point-value.plus{
-		color: #D9534F;
+		color: #FF4081;
 	}
 	.history-group .point-value.minus{
 		color: #5cb85c;
