--- a/includes/custom-contribution/static/css/src/style.css
+++ b/includes/custom-contribution/static/css/src/style.css
@@ -149,7 +149,7 @@
 				line-height: 20px;
 				color:#fff;
 				border-radius: 50%;
-				background: #d9534f;
+				background: #FF4081;
 				opacity: .7;
 				cursor: pointer;
 			}
