--- a/includes/custom-page-rank/static/css/src/style.css
+++ b/includes/custom-page-rank/static/css/src/style.css
@@ -23,13 +23,13 @@
 	top: 0;
 	font-size: 2em;
 	font-weight: bold;
-	color: #d9534f;
+	color: #FF4081;
 	opacity: .5;
 }
 
 .panel-rank .media-heading{
 	margin-bottom: 10px;
-	color: #d9534f;
+	color: #FF4081;
 	line-height: 1.5;
 }
 	.panel-rank .list-group-item:hover .media-heading{
