--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -15,8 +15,10 @@
 	 */
 	.slidebox-container .area-blur{
 		position: absolute;
+		top: -40px;
+		left: 0;
 		width: 100%;
-		height: 100%;
+		bottom: 0;
 		-webkit-filter: blur(15px);
 		-ms-filter: blur(15px);
 		filter: blur(15px);
@@ -105,7 +107,9 @@
 				display: inline-block;
 			}
 			#slidebox .area-main .des .more:hover{
-				background: rgba(255,255,255,.3);
+				background: #FF4081;
+				border-color: #FF4081;
+				text-shadow: none;
 			}
 	/**
 	 * .area-thumbnail
