--- a/includes/custom-page-tags/static/css/src/style.css
+++ b/includes/custom-page-tags/static/css/src/style.css
@@ -66,3 +66,6 @@
 			transform: rotate(-45deg);
 			box-shadow:-2px 2px 2px rgba(0,0,0,.2);
 		}
+	.panel-tags-index .panel-body{
+		padding: 0;
+	}
