--- a/includes/custom-slidebox/static/css/src/style.css
+++ b/includes/custom-slidebox/static/css/src/style.css
@@ -97,7 +97,10 @@
 			#slidebox .area-main .des span{
 				display: block;
 			}
-			
+			#slidebox .area-main .des .sub-title{
+				font-size: 20px;
+				margin: 5px 0;
+			}
 			#slidebox .area-main .des .more{
 				border: 1px solid #fff;
 				border-radius: 2px;
