--- a/includes/custom-account/static/css/src/style.css
+++ b/includes/custom-account/static/css/src/style.css
@@ -7,7 +7,7 @@
 }
 @media (min-width: 768px) {
 	#account-navbar .navbar{
-		box-shadow: 0 1px 4px rgba(0,0,0,.3);
+		box-shadow: 0 1px 0 1px rgba(0,0,0,.07);
 		border: none;
 		border-radius: 2px;
 	}
