--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -1,4 +1,4 @@
-﻿/**
+/**
  * reset bs
  */
 *{
@@ -504,7 +504,7 @@ img{
 		display: block;
 		color:#333;
 		border-radius: 2px;
-		box-shadow: 0px 1px 4px rgba(0,0,0,.3);
+		box-shadow: 0px 1px 0 1px rgba(0,0,0,.07);
 	}
 		.post-img-list a:hover{
 			/*color: #FF4081;*/
@@ -938,7 +938,7 @@ label.error{
 			padding: 10px;
 			border-bottom: 1px solid rgba(0,0,0,.1);
 		}
-		.comment-list #reply-title:after{
+		.comment-list #respond:before{
 			position:absolute;
 			content: '';
 			bottom: 100%;
@@ -949,13 +949,21 @@ label.error{
 			border-width: 0 10px 10px 10px;
 			border-color: transparent transparent #2196F3 transparent;
 		}
+		.comment-list #reply-title{
+			font-size: 20px;
+			line-height: 36px;
+			color: #2196F3;
+		}
+		.comment-list #reply-title:after{
+			display: none;
+		}
 	#respond .form-submit{
 		display: none;
 	}
 	#cancel-comment-reply-link{
 		position: absolute;
-		right: 0;
-		top: -2px;
+		right: 10px;
+		top: 10px;
 		width: 36px;
 		height: 36px;
 		font-size: 36px;
@@ -1053,7 +1061,7 @@ label.error{
 		.comment-list .comment-meta-data:after{
 			padding-left: 5px;
 			padding-right: 5px;
-			content:'路';
+			content:'·';
 			font-weight: normal;
 		}
 		.comment-list .comment-meta-data:last-child:after{
