--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -114,7 +114,8 @@
 	}
 		.panel-default > .panel-heading + *{
 			border-radius: 2px;
-			box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);
+			border: 1px solid rgba(0,0,0,.07);
+			border-bottom-width: 2px;
 		}
 
 	.panel-default > .panel-body{
@@ -122,10 +123,12 @@
 		padding: 20px 20px 0 20px;
 		border-radius: 2px 2px 0 0;
 		margin: 0;
-		box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);
+		border: 1px solid rgba(0,0,0,.07);
+		border-bottom-width: 2px;
 	}
 	.panel-default > .list-group{
-		box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);
+		border: 1px solid rgba(0,0,0,.07);
+		border-bottom-width: 2px;
 	}
 	.panel-default > .panel-body:last-child{
 		border-radius: 2px;
@@ -150,7 +153,9 @@
 		.panel-default .panel-title{
 		}
 	.panel-default .panel-footer{
-		box-shadow: 0 3px 3px rgba(0,0,0,.2);
+		margin-top: -2px;
+		border: 1px solid rgba(0,0,0,.07);
+		border-bottom-width: 2px;
 	}
 /**
  * input group
@@ -562,7 +567,9 @@ img{
 		background: #fff;
 		display: block;
 		padding-bottom: 10px;
-		box-shadow: 0 1px 0 1px rgba(0,0,0,.07);
+		/*box-shadow: 0 0 0 1px rgba(0,0,0,.07);*/
+		border: 1px solid rgba(0,0,0,.07);
+		border-bottom-width: 2px;
 		border-radius: 2px;
 		color: #999;
 	}
@@ -614,11 +621,15 @@ img{
 			color: #999;
 		}
 		.post-stick-list .post-list-meta .author .avatar{
+			display: inline-block;
 			vertical-align: top;
+			overflow: hidden;
+			width: 16px;
+			height: 16px;
 		}
 		.post-stick-list .post-list-meta .author .tx{
 			display: inline-block;
-			max-width: 6em; 
+			max-width: 5em; 
 			white-space: nowrap;overflow:hidden;text-overflow:ellipsis; 
 		}
 @media( min-width: 768px ){
@@ -701,7 +712,8 @@ img{
 	.widget > .panel-heading + *{
 		padding: 20px 20px 10px;
 		background: #fff;
-		box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);
+		border: 1px solid rgba(0,0,0,.07);
+		border-bottom-width: 2px;
 	}
 	.widget ul{
 		list-style-type: square;
@@ -732,7 +744,8 @@ img{
  * .widget_adbox
  */
 .widget_adbox{
-	box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);
+	border: 1px solid rgba(0,0,0,.07);
+	border-bottom-width: 2px;
 }
 /**
  * .widget_rank
@@ -863,7 +876,7 @@ img{
 	padding: 0;
 	background: none;
 	box-shadow: none;
-	
+	border: none;
 }
 	.widget_author_posts .post-img-lists{
 		margin: 0 -10px;
@@ -1267,6 +1280,10 @@ label.error{
 	min-height: 64px;
 	margin-bottom: 20px;
 }
+.main-nav-placeholder{
+	height: 64px;
+	margin-bottom: 20px;
+}
 .main-nav ul{
 	list-style-type: none;
 	margin: 0;
@@ -1281,13 +1298,27 @@ label.error{
 	 * .main-nav
 	 */
 	.main-nav{
-		position: relative;
-		background: rgba(255,255,255,.5);
+		position: fixed;
+		top: 0;
+		background: rgba(255,255,255,.9);
 		width: 100%;
 		color: #666;
-		box-shadow: 0 1px 0 rgba(0,0,0,.1);
+		box-shadow: 0 1px 3px rgba(0,0,0,.1);
 		z-index: 10;
 		margin-bottom: 20px;
+		
+	}
+	.admin-bar .main-nav{
+		top: 32px;
+	}
+	.main-nav.fold{
+		height: 0;
+		min-height: 0;
+		overflow: hidden;
+	}
+	.main-nav.top{
+		top: auto;
+		background: rgba(255,255,255,.5);
 	}
 	.main-nav .container{
 		position: relative;
@@ -1781,12 +1812,8 @@ label.error{
 	.content-reset img {
 		display:inline-block;
 		max-width:100%;
-		border:4px solid white;
-		padding:1px;
-		box-shadow:0 1px 3px rgba(0,0,0,.5);
-		-moz-transition: all .15s linear;
-		-webkit-transition: all .15s linear;
-		transition: all .15s linear;
+		box-shadow: 0 1px 3px rgba(0,0,0,.1);
+		border: 1px solid #fff;
 	}
 		.content-reset img:hover,
 		.content-reset img:active,
@@ -2511,6 +2538,7 @@ label.error{
 	margin: 0 !important;
 	background: none;
 	box-shadow: none;
+	border: none;
 }
 .widget .user-list{
 	position: relative;
@@ -2572,6 +2600,7 @@ label.error{
  * footer
  */
 #footer{
+	background: #fff;
 	border-top: 1px dashed rgba(0,0,0,.1);
 	position: relative;
 	margin-top: 40px;
@@ -2592,6 +2621,7 @@ label.error{
 		box-shadow: none;
 		padding: 0;
 		font-size: 12px;
+		border: none;
 	}
 	#footer .widget{
 		overflow: hidden;
@@ -2599,19 +2629,6 @@ label.error{
 		#footer .panel:after{
 			display: none;
 		}
-	#footer .copyright,
-	#footer .copyright a,
-	footer .widget-title{
-		color:#fff;
-		text-shadow: 0 1px 1px rgba(0,0,0,.5);
-	}
-	#footer .copyright a{
-		border-bottom: 1px dotted #fff;
-	}
-	#footer .copyright a:hover,
-	#footer .copyright a:active{
-		border-bottom-style: solid;
-	}
 /**
  * .back-to-top
  */
@@ -2649,9 +2666,13 @@ label.error{
 /**
  * media 
  */
+@media ( max-width: 782px ) {
+	.admin-bar .main-nav{
+		top: 46px;
+	}
+}
 @media (max-width: 767px){
 
-	
 	.header-nav-account-menu{
 		border-top: 1px solid rgba(0,0,0,.1);
 	}
